src/test/ui/unsized-locals/unsized-exprs2.stderr
warning: the feature `unsized_locals` is incomplete and may cause the compiler to crash
  --> $DIR/unsized-exprs2.rs:1:36
   |
LL | #![feature(unsized_tuple_coercion, unsized_locals)]
   |                                    ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0508]: cannot move out of type `[u8]`, a non-copy slice
  --> $DIR/unsized-exprs2.rs:23:5
   |
LL |     udrop::<[u8]>(foo()[..]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     cannot move out of here
   |     move occurs because value has type `[u8]`, which does not implement the `Copy` trait

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0508`.
